<resources>
    <string name="app_name">Daily Charger</string>
    <string-array name="sidebar_options">
        <item>View Schedule</item>
        <item>Edit Schedule</item>
        <item>Settings</item>
        <item>Help</item>
        <item>About</item>
        <item>Feedback</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="about">This app is made by dOOP (dat Object Oriented Programming) club! \n\n
        \t\tProgramming: Max Johnson, Dylan Hendrickson \n
        \t\tDesign and testing: Tanek Ballachanda, Channing Cimarusti, Andrew Jones, and others \n\n
        \t\tInterested in maintaining or improving this app? Email AAScheduleApp@gmail.com or check out our code on Github at github.com/maximusjohnsonus/aa-schedule.</string>
    <string name="help">
        \t\tView Schedule displays your schedule. It will default to the current day.\n\n
        \t\tEdit Schedule allows you to change your schedule. The first page lets you edit classes by block - you can set the name, room, and color of an entire block. The next pages let you edit each day individually. To add a period, simply shorten the periods that occupy the same time as your new period. A new period is created to fill the gap. To delete a period, resize the surrounding periods to cover up the unwanted period. The final page lets you load a new schedule from a template.\n\n
        \t\tFeedback sends an email to the development team. Send us your compliments, criticisms, suggestions for features, bugs, deep thoughts, unwanted children, and snacks.
    </string>
    <string name="feedback_info">Questions? Comments? Concerns? Email us at AAScheduleApp@gmail.com or fill out the form below.</string>
    <string name="feedback_entry">Enter Feedback</string>
    <string name="feedback_button">Submit Feedback</string>
    <string name="type_suggest_feature">Suggest Feature</string>
    <string name="type_report_bug">Report Bug</string>
    <string name="type_other">Other</string>
    <string name="feedback_name">Name/Email (Optional)</string>
    <string name="class_tag">Class Name:</string>
    <string name="room_tag">Room:</string>
    <string name="start_tag">Start Time:</string>
    <string name="end_tag">End Time:</string>
    <string name="color_tag">Select Color</string>
    <string name="free_tag">Free:</string>
    <string name="save_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="select_start">Select Start Time</string>
    <string name="select_end">Select End Time</string>
    <string name="free_name">Free</string>
    <string name="insane_time12">Invalid time. Please enter a time between 8:00AM and 3:32PM.</string>
    <string name="insane_time24">Invalid time. Please enter a time between 8:00 and 15:32.</string>
    <string name="misordered_time">The start time actually goes <i>before</i> the end time.</string>
    <string name="notes_hint">Tap to add notes</string>
    <string name="edit_block_label">Edit Block</string>
    <string name="edit_per_label">Edit Period</string>
    <string name="get_sch_title">Make a new schedule</string>
    <string name="get_sch_download">Download Your Schedule</string>
    <string name="get_sch_10_12">Use 10&#8211;12 D1 Template</string>
    <string name="get_sch_10_12_offset">Use 10&#8211;12 D2 Template*</string>
    <string name="get_sch_8_9">Use 8&#8211;9 Template</string>
    <string name="get_sch_6_7">Use 6&#8211;7 Template</string>
    <string name="get_sch_sample">Use Sample Schedule</string>
    <string name="get_sch_explain">*The D2 template has D2 as the fourth block, a short break between C and D2 blocks on some days, and lunch before D2 on the others.</string>


    <string name="PSA_re_editing">Default loaded. Go to the first page of Edit Schedule to fill in the names of each block.</string>
    <string name="CPD_title">Select Color</string>
    <string name="CPD_old">Old</string>
    <string name="CPD_new">New</string>

    <string name="hello_world">Hello world!</string>

    <!--settings labels-->
    <string name="settings_general">General</string>
    <string name="settings_24_time">24 Hour Time</string>
    <string name="settings_highlight">Highlight Current Day</string>
    <string name="settings_weekend">Show Weekends</string>
    <string name="settings_align">Left Justify Class Names</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_min_per">Minimum Period Length</string>
    <string name="settings_show_notes">Enable Notes</string>
    <string name="settings_long_notes">Use Long Touch For Notes</string>
    <string name="edit_day_label">Edit Day</string>

    <!--bundle tags-->
    <string name="bdl_name">BDL_NAME</string>
    <string name="bdl_start">BDL_START</string>
    <string name="bdl_end">BDL_END</string>
    <string name="bdl_room">BDL_ROOM</string>
    <string name="bdl_color">BDL_COLOR</string>
    <string name="bdl_set_color">BDL_SET_COLOR</string>
    <string name="bdl_free">BDL_FREE</string>
    <string name="bdl_free_changed">BDL_FREE_CHANGED</string>

    <!-- File/pref names:-->
    <string name="pref_storage">storage</string> <!--used for storing data-->
    <string name="time_24_pref">time_24hr</string>
    <string name="highlight_pref">highlight_pref</string>
    <string name="weekend_pref">weekend_pref</string>
    <string name="align_pref">align_pref</string>
    <string name="min_per_pref">min_per_pref</string>
    <string name="long_touch_pref">long_touch_pref</string>
    <string name="show_notes_pref">show_notes_pref</string>
    <string name="schedule_JSON">schedule_JSON</string>
    <string name="JSON_period_start_time">per_start_time</string>
    <string name="JSON_period_end_time">per_end_time</string>
    <string name="JSON_period_class_name">per_class_name</string>
    <string name="JSON_period_room">per_room</string>
    <string name="JSON_period_block">per_block</string>
    <string name="JSON_period_is_free">per_is_free</string>
    <string name="JSON_period_color">per_color</string>
    <string name="JSON_period_has_color">per_has_color</string>
    <string name="JSON_period_notes">per_notes</string>
</resources>
