<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/feedbackInfo"
        android:text="@string/feedback_info"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/feedbackType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/typeSuggestFeature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_suggest_feature" />

        <RadioButton
            android:id="@+id/typeReportBug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_report_bug" />

        <RadioButton
            android:id="@+id/typeOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_other" />

    </RadioGroup>

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/feedbackText"
        android:layout_width="match_parent"
        android:inputType="textMultiLine|textCapSentences"
        android:layout_height="wrap_content"
        android:lines="5"
        android:background="@drawable/rectangle"
        android:gravity="top"
        android:hint="@string/feedback_entry"
        />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/feedbackName"
        android:layout_width="match_parent"
        android:inputType="textMultiLine|textCapSentences"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:gravity="top"
        android:hint="@string/feedback_name"
        />

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/feedback_button" />

</LinearLayout>